tweak GC options