@@ -13,6 +13,8 @@ cat > ~/.sbt/repositories <<EOF
   sonatype-releases: https://oss.sonatype.org/content/repositories/releases
   mavenLocal: file:///home/huitseeker/Scala/m2repo
 EOF
+
+export JAVA_OPTS="-XX:+UseParNewGC -XX:+UseConcMarkSweepGC"
 # create classfiles - a higher version number does not work for Play,
 # since with 2.10.4-RCs, dependencies have not been rebuilt
 sbt-0.13.0 'set every scalaVersion:="2.10.3"' compile
